adding the testcases